# django19.2

./: manage.py  pyproject.toml
catalog/: urls.py  view.py
catalog/config/: settings
catalog/templates/catalog/: contacts.html  home.html
